* Fixed handling bayer/Xtrans patterns in more robust way accross the codebase (!903)
* Fixed astrometric alignement for mosaics with some slight skew in the solution (#1747)
* Fix issues identifed by static analysis (MR tbc)
* Fix issue with findstar command when running from a python script (#1782)

**Improvements:**
* Compiled .pyc scripts are now only shown in the scripts menu if their magic number matches the available intepreter
* Centre the background extraction grid vertically instead of starting at the image edge and having a gap (#1741)
* Right-click scripts directly from the script menu to open them in the editor
* Optimize image preview, allow colour previews and improve preview stretching to use autostretch, add new large preview size at 512px
* Added SirilInterface.get_image_from_file() method
* Added Search box in the Script treeview
* Made reading astrometric solution more robust to CDELT/PC matrices not following the expected formalism (#1770)
* Added SirilInterface.analyse_image_from_file(), SirilInterface.undo() and SirilInterface.redo()
* Approved use of PyQt6 for creating python script GUIs (now confident it is problem free on all target OSes)
* Added some plate solution-related keywords to FKeywords sirilpy class. (#1779)

siril 1.4.0-beta3
07/11/25

**Fixes:**
* Fixed crash when opening 8-bit XISF file (#1638)
* Fixed `match stars in selection` option for global registration (#1644)
* Fixed an issue where image processing dialogs could fail to unblock python scripts when closed.
* Fixed an issue where the python pix2radec and radec2pix commands failed with coords outside the image (!887)
* Fixed an issue that meant the pyscript command was not waiting for the python interpreter to exit (#1660)
* Fixed an issue with some commands e.g. denoise that meant they would always indicate failure in a script (#1661)
* Fixed Crash in pixelmath command with 16-bit images (#1672)