@@ -603,10 +603,10 @@ static int set_spcc_args(struct photometric_cc_data *args) {
 			return 1;
 		}
 	} else {
-		if (args->selected_sensor_osc == -1 || args->selected_filter_osc == -1 ||
-						(args->selected_filter_lpf == -1 && args->is_dslr == TRUE) ||
-						args->selected_white_ref == -1) {
-			siril_log_color_message(_("Error: ensure OSC sensor, OSC filter and white reference are selected.\n"), "red");
+		if (args->selected_sensor_osc == -1 || (args->selected_filter_osc == -1 && !args->nb_mode) ||
+					(args->selected_filter_lpf == -1 && args->is_dslr == TRUE) ||
+					args->selected_white_ref == -1) {
+			siril_log_color_message(_("Error: ensure OSC sensor, OSC filter or NB filter values, and white reference are selected.\n"), "red");
 			return 1;
 		}
 	}
