@@ -19,6 +19,7 @@ xx/xx/xx
 * Fixed astrometric alignement for mosaics with some slight skew in the solution (#1747)
 * Fix issues identifed by static analysis (MR tbc)
 * Fix issue with findstar command when running from a python script (#1782)
+* Fix issue in SPCC where it would complain about missing OSC BB filter when in NB mode
 
 **Improvements:**
 * Compiled .pyc scripts are now only shown in the scripts menu if their magic number matches the available intepreter
